--- a/ML_Assignment1.ipynb
+++ b/ML_Assignment1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP142/k3IljeNti8EEFrB4A",
+      "authorship_tag": "ABX9TyP/BVQn9QBK2lDihpfCQtqm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
         "\n",
-        "knn_model = KNeighborsClassifier(n_neighbors=5)  # You can adjust n_neighbors as needed\n",
+        "knn_model = KNeighborsClassifier(n_neighbors=5)\n",
         "knn_model.fit(X_train, y_train)\n",
         "\n",
         "from sklearn.metrics import accuracy_score\n",
